--- a/src/app/home/faas/faas-listing/faas-cell/faas-cell.component.scss
+++ b/src/app/home/faas/faas-listing/faas-cell/faas-cell.component.scss
@@ -20,7 +20,19 @@
 .options {
   .btn {
     &:hover {
-      color: $secondary !important;
+      color: $secondary  !important;
+    }
+  }
+}
+
+.url-block {
+  .btn {
+    right: -100px;
+  }
+
+  &:hover {
+    .btn {
+      right: -11px;
     }
   }
 }
