--- a/src/app/home/faas/faas-listing/faas-listing.component.scss
+++ b/src/app/home/faas/faas-listing/faas-listing.component.scss
@@ -10,14 +10,11 @@
   overflow: auto;
 }
 
-.custom-style {
-  height: 100%;
-}
-
-
-.fa-exclamation-circle {
-  top: 8px;
-  right: 8px;
+.name-wrapper {
+  .dsi {
+    top: 9px;
+    right: 9px;
+  }
 }
 
 .overlay {
