--- a/src/app/home/control-panel/user-group/user-group.component.html
+++ b/src/app/home/control-panel/user-group/user-group.component.html
@@ -86,57 +86,54 @@
 
 <div [ngClass]="{
         show: showNewGroupWindow
-      }" class="new-group-window position-fixed bg-white border-left p-4">
-  <div class="d-flex flex-column align-items-center" [formGroup]="form">
-    <div class="d-flex flex-column w-100">
-      <div class="d-flex align-items-center justify-content-between mb-3">
-        <div class="d-flex align-items-center">
-          <span class="font-weight-bold mt-2">New Group</span>
-        </div>
-        <button type="button" class="close" (click)="showNewGroupWindow=false">
-          <span>&times;</span>
-        </button>
+      }" class="new-group-window position-fixed bg-white border-left p-4 d-flex flex-column" [formGroup]="form">
+  <div class="d-flex flex-column w-100">
+    <div class="d-flex align-items-center justify-content-between mb-3">
+      <div class="d-flex align-items-center">
+        <span class="font-20 fw-600 mt-2">New Group</span>
       </div>
-      <div class="d-flex flex-column w-100 mt-4">
-        <label for="name" class="font-13 text-secondary">
-          <span class="text">Name</span>
-          <sup class="text-danger font-normal high-zIndex" ngbTooltip="Mandatory field">*</sup>
-        </label>
-        <div class="name-wrapper position-relative">
-          <input newServiceName type="text" class="form-control" id="name" placeholder="Untitled Service"
-            formControlName="name" (keyup.enter)="newServiceTextarea.focus()" odpAutoFocus [ngClass]="{
-                  'is-invalid': form.get('name').invalid && form.get('name').dirty
-                }" />
-          <ng-container *ngIf="form.get('name').dirty">
-            <span *ngIf="form.get('name').hasError('required')"
-              class="text-danger position-absolute fa fa-exclamation-circle high-zIndex" container="body"
-              ngbTooltip="Name is required"></span>
-            <span *ngIf="form.get('name').hasError('maxlength')"
-              class="text-danger position-absolute fa fa-exclamation-circle high-zIndex" container="body"
-              ngbTooltip="Name should be within 30 characters"></span>
-            <span *ngIf="form.get('name').hasError('pattern')"
-              class="text-danger position-absolute fa fa-exclamation-circle high-zIndex" container="body"
-              ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
-          </ng-container>
-        </div>
-        <label for="description" class="font-13 text-secondary mt-3">Description</label>
-        <div class="name-wrapper position-relative">
-          <textarea #newServiceTextarea class="form-control" id="description" rows="5" placeholder="No description"
-            formControlName="description" (keydown.enter)="$event.preventDefault()"
-            (keyup.enter)="createGroup()"></textarea>
-          <ng-container *ngIf="form.get('description').dirty">
-            <span *ngIf="form.get('description').hasError('maxlength')"
-              class="text-danger position-absolute fa fa-exclamation-circle high-zIndex" container="body"
-              ngbTooltip="Description should be within 240 characters"></span>
-          </ng-container>
-        </div>
-      </div>
-    </div>
-    <div class="d-flex align-self-end justify-content-end w-100 mt-4">
-      <button type="button" class="btn btn-min-width btn-primary" id="newGroupModalYes" [disabled]="form.invalid"
-        (click)="createGroup()">
-        Create
+      <button type="button" class="close" (click)="showNewGroupWindow=false">
+        <span>&times;</span>
       </button>
     </div>
+    <div *ngIf="showNewGroupWindow" class="d-flex flex-column w-100 mt-4">
+      <label for="name" class="font-13 text-secondary">
+        <span class="text">Name</span>
+        <sup class="text-danger font-normal high-zIndex" ngbTooltip="Mandatory field">*</sup>
+      </label>
+      <div class="name-wrapper position-relative">
+        <input newServiceName type="text" class="form-control" id="name" placeholder="Untitled Service"
+          formControlName="name" [ngClass]="{'is-invalid': form.get('name').invalid && form.get('name').dirty}"
+          odpAutoFocus />
+        <ng-container *ngIf="form.get('name').dirty">
+          <span *ngIf="form.get('name').hasError('required')"
+            class="text-danger position-absolute dsi dsi-danger-circle high-zIndex" container="body"
+            ngbTooltip="Name is required"></span>
+          <span *ngIf="form.get('name').hasError('maxlength')"
+            class="text-danger position-absolute dsi dsi-danger-circle high-zIndex" container="body"
+            ngbTooltip="Name should be within 30 characters"></span>
+          <span *ngIf="form.get('name').hasError('pattern')"
+            class="text-danger position-absolute dsi dsi-danger-circle high-zIndex" container="body"
+            ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
+        </ng-container>
+      </div>
+      <!-- <label for="description" class="font-13 text-secondary mt-3">Description</label>
+      <div class="name-wrapper position-relative">
+        <textarea #newServiceTextarea class="form-control" id="description" rows="5" placeholder="No description"
+          formControlName="description" (keydown.enter)="$event.preventDefault()"
+          (keyup.enter)="createGroup()"></textarea>
+        <ng-container *ngIf="form.get('description').dirty">
+          <span *ngIf="form.get('description').hasError('maxlength')"
+            class="text-danger position-absolute fa fa-exclamation-circle high-zIndex" container="body"
+            ngbTooltip="Description should be within 240 characters"></span>
+        </ng-container>
+      </div> -->
+    </div>
+  </div>
+  <div class="d-flex align-self-end justify-content-end w-100 mt-auto">
+    <button type="button" class="btn btn-primary w-100" id="newGroupModalYes" [disabled]="form.invalid"
+      (click)="createGroup()">
+      Create
+    </button>
   </div>
 </div>
