--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -11,8 +11,8 @@
       </button>
     </div>
   </div>
-  <div class="card-container d-flex flex-column w-100 px-3">
-    <ag-grid-angular #agGrid *ngIf="columnDefs" class="ag-theme-balham ag-grid-container custom-style"
+  <div class="card-container d-flex flex-column w-100 px-4 pb-4">
+    <ag-grid-angular #agGrid *ngIf="columnDefs" class="ag-theme-balham ag-grid-container custom-style h-100"
       [columnDefs]="columnDefs" floatingFilter="true" rowModelType="infinite" [rowHeight]="56"
       (filterModified)="filterModified($event)" [datasource]="dataSource" cacheBlockSize="30" headerHeight="36"
       floatingFiltersHeight="40" (sortChanged)="sortChanged($event)" (gridReady)="gridReady($event)"
@@ -22,7 +22,8 @@
 </div>
 
 <div *ngIf="showNewFaasWindow" class="overlay position-fixed"></div>
-<div class="new-faas-window p-4 position-fixed border-left bg-white d-flex flex-column" [ngClass]="{'show': showNewFaasWindow}" [formGroup]="form">
+<div class="new-faas-window p-4 position-fixed border-left bg-white d-flex flex-column"
+  [ngClass]="{'show': showNewFaasWindow}" [formGroup]="form">
   <div class="d-flex align-items-center justify-content-between">
     <h5 class="m-0 font-20 fw-600">New Function</h5>
     <button type="button" class="close" (click)="showNewFaasWindow=false">
@@ -37,18 +38,17 @@
       </label>
       <div class="name-wrapper position-relative">
         <input newFaasName type="text" class="form-control" id="name" placeholder="Untitled Function"
-          formControlName="name" (keyup.enter)="newFaasTextarea.focus()" odpAutoFocus
+          formControlName="name" odpAutoFocus
           [ngClass]="{'is-invalid':form.get('name').invalid && form.get('name').dirty}">
         <ng-container *ngIf="form.get('name').dirty">
           <span *ngIf="form.get('name').hasError('required')"
-            class="text-danger position-absolute fa fa-exclamation-circle" container="body"
+            class="text-danger position-absolute dsi dsi-danger-circle" container="body"
             ngbTooltip="Name is required"></span>
           <span *ngIf="form.get('name').hasError('maxlength')"
-            class="text-danger position-absolute fa fa-exclamation-circle" container="body"
+            class="text-danger position-absolute dsi dsi-danger-circle" container="body"
             ngbTooltip="Name should be within 30 characters"></span>
-          <span *ngIf="form.get('name').hasError('pattern')"
-            class="text-danger position-absolute fa fa-exclamation-circle" container="body"
-            ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
+          <span *ngIf="form.get('name').hasError('pattern')" class="text-danger position-absolute dsi dsi-danger-circle"
+            container="body" ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
         </ng-container>
       </div>
     </div>
@@ -58,18 +58,18 @@
         <input type="text" class="form-control" id="apiEndpoint" placeholder="/api/a/faas/" formControlName="api">
       </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
       <label for="description" class="">Description</label>
       <div class="name-wrapper position-relative">
         <textarea #newFaasTextarea class="form-control" id="description" rows="5" placeholder="No description"
           formControlName="description" (keydown.enter)="$event.preventDefault()"></textarea>
         <ng-container *ngIf="form.get('description').dirty">
           <span *ngIf="form.get('description').hasError('maxlength')"
-            class="text-danger position-absolute fa fa-exclamation-circle" container="body"
+            class="text-danger position-absolute dsi dsi-danger-circle" container="body"
             ngbTooltip="Description should be within 240 characters"></span>
         </ng-container>
       </div>
-    </div>
+    </div> -->
   </div>
   <div class="d-flex align-self-end justify-content-end w-100 mt-auto">
     <button type="button" class="btn btn-primary w-100" id="newFaasModalYes" [disabled]="form.invalid"
