--- a/src/app/utils/field-type/field-type.component.html
+++ b/src/app/utils/field-type/field-type.component.html
@@ -1,11 +1,11 @@
 <div class="d-flex align-items-center">
     <span
-        class="{{getClass()}} border text-accent bg-white rounded d-flex align-items-center justify-content-center field-type-badge"></span>
+        class="dsi dsi-bg dsi-sm {{getClass()}} rounded-circle d-flex align-items-center justify-content-center field-type-badge"></span>
     <span *ngIf="label" class="text-dark ml-2">{{getLabel()}}</span>
     <ng-container *ngIf="collectionType">
         <span class="text-dark mx-2">of</span>
         <span
-        class="{{collectionClass}} border text-accent bg-white rounded d-flex align-items-center justify-content-center field-type-badge"></span>
+        class="{{collectionClass}} rounded-circled-flex align-items-center justify-content-center field-type-badge"></span>
         <span *ngIf="label" class="text-dark ml-2">{{collectionType}}</span>
     </ng-container>
 </div>
