--- a/src/app/utils/structure-field-properties/structure-field-properties.component.html
+++ b/src/app/utils/structure-field-properties/structure-field-properties.component.html
@@ -307,7 +307,7 @@
         <button type="button" class="btn btn-link text-primary" (click)="deleteField()"
           [disabled]="!canDelete">Remove</button>
       </span> -->
-      <span class="fa fa-times text-secondary hover close" id="closeicon" (click)="showProperties=false"></span>
+      <span class="fa fa-times text-secondary hover" id="closeicon" (click)="showProperties=false"></span>
     </span>
   </div>
   <div class="schemaProperties-wrapper" *ngIf="!idField">
