--- a/src/app/home/local-bot/local-bot.component.html
+++ b/src/app/home/local-bot/local-bot.component.html
@@ -233,7 +233,7 @@
         <label for="period"> Period </label>
         <div class="input-group">
           <select id="period" class="form-control input-text" formControlName="period"
-            (ngModelChange)="periodChange($event)" ngModel="days">
+            (onchange)="periodChange($event)">
             <option *ngFor="let item of expiryOptions" [value]="item.value">
               {{ item.label }}
             </option>
@@ -268,7 +268,7 @@
         </label>
         <div class="input-group">
           <input id="label" class="form-control pr-4 input-text" type="text" placeholder="Label name"
-            formControlName="label" autocomplete="autocomplete_off_hack" odpAutoFocus/>
+            formControlName="label" autocomplete="autocomplete_off_hack" odpAutoFocus />
           <span class="dsi dsi-danger-circle text-danger error-icon position-absolute" *ngIf="
               attributeForm.get('type').touched &&
               attributeForm.get('label').hasError('required')
@@ -282,7 +282,7 @@
         </label>
         <div class="input-group">
           <select id="type" class="form-control input-text" formControlName="type"
-            (ngModelChange)="onAttributeFormTypeChange($event)">
+            (onchange)="onAttributeFormTypeChange($event)">
             <option *ngFor="let item of types" [value]="item.value">
               {{ item.label }}
             </option>
