--- a/src/app/admin/app-list/app-list.component.scss
+++ b/src/app/admin/app-list/app-list.component.scss
@@ -25,10 +25,10 @@
   }
 }
 
-.app-list {
-  padding-left: 20vw;
-  padding-right: 20vw;
-}
+// .app-list {
+//   padding-left: 20vw;
+//   padding-right: 20vw;
+// }
 
 .apps-container {
   min-height: 310px;
@@ -62,8 +62,6 @@
   max-width: 90px;
   min-height: 90px;
   max-height: 90px;
-  margin-top: 30px !important;
-  margin-right: 30px !important;
 
   .delete-option {
     position: absolute;
@@ -177,8 +175,8 @@
 }
 
 .name-wrapper {
-  .fa-exclamation-circle {
-    top: 7px;
+  .dsi-danger-circle {
+    top: 8px;
     right: 5px;
   }
 }
@@ -192,4 +190,29 @@
   text-align: center;
   line-height: 150px;
   margin: 20px 0;
+}
+
+
+.new-app-window {
+  height: 100vh;
+  width: 360px;
+  top: 0;
+  right: -360px;
+  z-index: 2;
+  transition: 0.2s;
+  overflow: auto;
+  padding-top: 40px !important;
+
+  &.show {
+    right: 0px !important;
+  }
+
+  &.overlay {
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background: rgba($color: #000000, $alpha: 0.6);
+  }
 }
