--- a/src/app/home/control-panel/user/bulk-import/bulk-import.component.html
+++ b/src/app/home/control-panel/user/bulk-import/bulk-import.component.html
@@ -4,26 +4,24 @@
         <div class="text-secondary mt-2">Processing...</div>
     </div>
 </div>
-<div class="d-flex flex-column position-relative">
-    <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb>
-    <div class="options d-flex justify-content-between align-items-center w-100 border-bottom p-3">
-        <div class="font-weight-bold font-16">List of Import Tasks</div>
-        <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn-min-width btn btn-dark"
+<div class="import-wrapper d-flex flex-column position-relative page-padding bg-light-gray">
+    <div class="options d-flex justify-content-between align-items-center w-100 pb-5">
+        <div class="fw-600 font-22">Bulk Import Tasks</div>
+        <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn-min-width btn btn-primary d-flex align-items-center justify-content-center"
             (click)="newUpload()">
-            <span class="dsi dsi-upload mr-2"></span>
-            <span class="text">New Bulk Task</span>
+            <span class="dsi dsi-plus mr-2"></span>
+            <span class="text">New Import</span>
         </button>
     </div>
-    <div class="user-list w-100 p-3">
+    <div class="user-list w-100 rounded-lg bg-white border">
         <div class="grid-container">
-            <div *ngIf="!taskList || taskList.length == 0" class="alert alert-dark">No New Tasks Found</div>
+            <p *ngIf="!taskList || taskList.length == 0" class="p-3 m-0">No New Tasks Found</p>
             <div *ngIf="taskList && taskList.length > 0" class="list-group">
                 <div class="list-group-item list-group-item-action d-flex align-items-center hover"
                     *ngFor="let item of taskList" [routerLink]="item._id">
                     <div class="id">{{item._id}}</div>
                     <div class="timestamp">{{item._metadata.createdAt | date:'dd/MM/yyyy HH:mm'}}</div>
-                    <div class="status font-weight-bold"
-                        [ngClass]="{'text-danger':item.status=='Error'}">
+                    <div class="status font-weight-bold" [ngClass]="{'text-danger':item.status=='Error'}">
                         {{item.status}}</div>
                     <div class="message">{{item.message}}</div>
                 </div>
@@ -32,14 +30,22 @@
     </div>
 </div>
 <div *ngIf="showUploadWindow" class="overlay position-fixed" (click)="showUploadWindow=false"></div>
-<div [ngClass]="{'show':showUploadWindow}" class="upload-window position-fixed border-left p-3 bg-white">
-    <h3>Bulk Create Users</h3>
-    <hr>
+<div [ngClass]="{'show':showUploadWindow}" class="upload-window position-fixed border-left page-padding bg-white">
+    <div class="d-flex align-items-center justify-content-between mb-5">
+        <span class="font-20 fw-600">Bulk Create Users</span>
+        <span class="dsi dsi-close hover" (click)="showUploadWindow=false"></span>
+    </div>
     <form>
         <div class="form-group">
-            <label for="file">Select File</label>
+            <!-- <label for="file">Select File</label>
             <input class="form-control-file" type="file" id="file" name="file" (change)="onChange($event)"
-                accept=".csv">
+                accept=".csv"> -->
+            <div class="custom-file mb-3">
+                <input type="file" class="custom-file-input" id="file" (change)="onChange($event)" accept=".csv"
+                    required>
+                <label class="custom-file-label" for="file">{{selectedFile ? selectedFile.name :'Choose file...'}}</label>
+                <div class="invalid-feedback">Example invalid custom file feedback</div>
+            </div>
             <small *ngIf="fileAdded" class="form-text text-success">File Selected</small>
             <div class="mt-3">
                 <span class="mr-2 font-13">Please upload a .csv file, check the template for more info.</span>
@@ -55,6 +61,6 @@
                 <span>Login to Azure</span>
             </button>
         </div>
-        <button type="button" class="btn btn-dark" (click)="startProcess()">Start Import Process</button>
+        <button type="button" class="btn btn-primary w-100" (click)="startProcess()">Start Import Process</button>
     </form>
 </div>
